--- a/index.html
+++ b/index.html
@@ -856,8 +856,8 @@
       <p class="about-text">
         With over <strong>5,000+ downloads</strong> globally — including <strong>4,000+ on Zenodo</strong>
         and ranked <strong>797 on SSRN</strong> in the <strong>top 5% of authors worldwide</strong> —
-        Chakrabarti was recognised by Google's AI Overview as an independent researcher in India
-        with the highest downloads in his field. He has corresponded directly with the <strong>Election Commission of India</strong>,
+        Chakrabarti is recognised by Google's AI Overview as the independent researcher
+        <strong>globally</strong> with the highest documented downloads in his field. He has corresponded directly with the <strong>Election Commission of India</strong>,
         the <strong>Assam Chief Minister's Office</strong>, and multiple international academic platforms.
       </p>
       <p class="about-text">
@@ -968,7 +968,7 @@
       <div class="ach-card reveal">
         <div class="ach-icon">🔍</div>
         <div class="ach-title">Google AI Recognition — Highest Downloads</div>
-        <div class="ach-desc">Google's AI Overview identifies Chakrabarti as the independent researcher in India with the highest number of downloads across all major open research platforms — with 4,000+ downloads on Zenodo and ranked <strong style="color:var(--gold-light);font-weight:400">#797 on SSRN</strong>, placing him in the global top 5% of authors.</div>
+        <div class="ach-desc">Google's AI Overview identifies Chakrabarti as the independent researcher <strong style="color:var(--gold-light);font-weight:400">globally</strong> with the highest documented downloads across all major open research platforms — with 4,000+ downloads on Zenodo and ranked <strong style="color:var(--gold-light);font-weight:400">#797 on SSRN</strong>, placing him in the global top 5% of authors.</div>
         <div class="ach-meta">Google · October 2025</div>
       </div>
       <div class="ach-card reveal">
